# ai-engineering

./: .gitignore  AGENTS.md  CLAUDE.md  README.CS146S.md  README.ad-hoc.md  README.md  README.small.md
blog-posts/agent-tech-risk/: AGENTS.md  Makefile  README.md  dataset_card.md  docker-compose.yaml  eval_results.json  pyproject.toml
blog-posts/agent-tech-risk/cases/case_001/: aws_state.json  diagram.md  narrative.md  profile.yaml  risks.yaml
blog-posts/agent-tech-risk/cases/case_002/: aws_state.json  diagram.md  narrative.md  profile.yaml  risks.yaml
blog-posts/agent-tech-risk/cases/case_003/: aws_state.json  diagram.md  narrative.md  profile.yaml  risks.yaml
blog-posts/agent-tech-risk/cases/case_004/: aws_state.json  diagram.md  narrative.md  profile.yaml  risks.yaml
blog-posts/agent-tech-risk/cases/case_005/: aws_state.json  diagram.md  narrative.md  profile.yaml  risks.yaml
blog-posts/agent-tech-risk/cases/case_1770000056/: aws_state.json  diagram.md  narrative.md  risks.yaml
blog-posts/agent-tech-risk/cases/case_cloudsync/: aws_state.json  diagram.md  narrative.md  profile.yaml  risks.yaml
blog-posts/agent-tech-risk/cases/case_codeforge/: aws_state.json  diagram.md  narrative.md  profile.yaml  risks.yaml
blog-posts/agent-tech-risk/cases/case_datavault/: aws_state.json  diagram.md  narrative.md  profile.yaml  risks.yaml
blog-posts/agent-tech-risk/cases/case_devpipe/: aws_state.json  diagram.md  narrative.md  profile.yaml  risks.yaml
blog-posts/agent-tech-risk/cases/case_healthbridge/: aws_state.json  diagram.md  narrative.md  profile.yaml  risks.yaml
blog-posts/agent-tech-risk/cases/case_insurenet/: aws_state.json  diagram.md  narrative.md  profile.yaml  risks.yaml
blog-posts/agent-tech-risk/cases/case_meddata/: aws_state.json  diagram.md  narrative.md  profile.yaml  risks.yaml
blog-posts/agent-tech-risk/cases/case_payflow/: aws_state.json  diagram.md  narrative.md  risks.yaml
blog-posts/agent-tech-risk/cases/case_quickcart/: aws_state.json  diagram.md  narrative.md  profile.yaml  risks.yaml
blog-posts/agent-tech-risk/cases/case_shipfast/: aws_state.json  diagram.md  narrative.md  profile.yaml  risks.yaml
blog-posts/agent-tech-risk/cases/case_test/: aws_state.json  diagram.md  narrative.md  profile.yaml  risks.yaml
blog-posts/agent-tech-risk/scripts/: debug_cases.py  run_eval.py
blog-posts/agent-tech-risk/src/risk_discovery/: agent.py  cli.py  eval.py  models.py
blog-posts/agent-tech-risk/src/risk_discovery/eval/: evaluators.py  runner.py
blog-posts/agent-tech-risk/src/risk_finder/: agent.py  cli.py
blog-posts/agent-tech-risk/src/risk_finder/eval/: dataset.py  runner.py
blog-posts/agent-tech-risk/src/risk_generator/: categories.py  cli.py  deployer.py  generator.py  models.py
blog-posts/agent-tech-risk/tests/: test_discovery.py  test_generator.py
blog-posts/ai-product-template/api/: .dockerignore  Dockerfile  app.db  pyproject.toml
blog-posts/ai-product-template/api/alembic/: env.py
blog-posts/ai-product-template/api/alembic/versions/: 3b724a9437bd_initial_schema.py
blog-posts/ai-product-template/api/src/api/: auth.py  config.py  main.py  seed_data.py
blog-posts/ai-product-template/api/src/api/db/: session.py  types.py
blog-posts/ai-product-template/api/src/api/models/: __init__.py  item.py  user.py  workspace.py  workspace_member.py
blog-posts/ai-product-template/api/src/api/routes/: __init__.py  agent.py  items.py  workspaces.py
blog-posts/ai-product-template/api/tests/: conftest.py
blog-posts/ai-product-template/api/tests/integration/: test_agentic_feature.py  test_deterministic_feature.py  test_routes.py  test_workspace_sharing.py
blog-posts/ai-product-template/api/tests/integration/fixtures/: sample_pdf_d3_code.js
blog-posts/ai-product-template/api/tests/unit/: test_models.py
blog-posts/dagster-parallel-web/: Makefile  README.md  pyproject.toml
blog-posts/dagster-parallel-web/app/: find.py  verify.py  visualize.py
blog-posts/dagster-parallel-web/notes/: results-simple-base-verify.json  results-simple-base.json
blog-posts/databricks-officeqa-benchmark/: Makefile  README.md  modal_officeqa_storage.py  pyproject.toml
blog-posts/databricks-officeqa-benchmark/src/databricks_officeqa_benchmark/: __init__.py  metrics.py  modal_eval_simple.py  modal_file_search.py  modal_file_search_jsons.py  modal_file_search_parsed_json.py  modal_file_search_pdfs.py  modal_file_search_transformed.py  modal_gcp_rag_parsed_json.py  modal_gcp_rag_transformed_txt.py  modal_parsed_json_file_search.py  modal_vertex_rag_raw_pdfs.py
blog-posts/databricks-officeqa-benchmark/tests/: test_metrics.py  test_smoke.py
module-1/: README.md
module-2/: PRACTICE.md  README.md  requirements.test.txt
module-3/: README.md
module-4/: PRACTICE.md  README.md  requirements.txt
module-5/: .gitignore  Makefile  README.md
module-6/: README.md
module-7/: Dockerfile  PRACTICE.md  README.md  requirements.txt
module-8/: PRACTICE.md  README.md
plans/: agent-tech-lead-blog-post.md
(+102 files in other folders)
