[project]
name = "agent-tech-risk"
version = "0.1.0"
description = "AWS Risk Case Generator for PE Technical Due Diligence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "boto3>=1.35",
    "python-dotenv>=1.0",
    "claude-agent-sdk",
    "awscli>=1.44.20",
]

[project.optional-dependencies]
dev = ["localstack>=4.0"]

[project.scripts]
risk-generator = "risk_generator.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/risk_generator"]
