[project]
name = "agent-tech-risk"
version = "0.1.0"
description = "AWS Risk Case Generator and Finder for PE Technical Due Diligence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-ai>=0.2",
    "anthropic>=0.40",
    "pydantic-evals>=0.2",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "boto3>=1.35",
    "docker>=7.0",
    "python-dotenv>=1.0",
    "claude-agent-sdk",
    "braintrust[otel]>=0.4.3",
    "opentelemetry-sdk>=1.39.1",
]

[project.optional-dependencies]
dev = ["localstack>=4.0"]

[project.scripts]
risk-generator = "risk_generator.cli:main"
risk-discovery = "risk_discovery.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/risk_generator", "src/risk_discovery"]
