[project]
name = "agent-tech-risk"
version = "0.1.0"
description = "AWS Risk Case Generator and Discovery for PE Technical Due Diligence"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
dev-dependencies = [
    "risk-generator",
    "risk-discovery",
    "pytest>=9.0",
    "ruff>=0.15",
]

[tool.uv.sources]
risk-generator = { workspace = true }
risk-discovery = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
