[project]
name = "databricks-officeqa-benchmark"
version = "0.1.0"
description = "Databricks OfficeQA benchmark experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
