[project]
name = "api"
version = "0.1.0"
description = "Simple FastAPI service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.122.0",
    "uvicorn==0.38.0",
    "sqlalchemy==2.0.44",
    "pydantic==2.12.5",
    "pytest==9.0.1",
    "httpx==0.28.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
